--- a/style.css
+++ b/style.css
@@ -107,93 +107,43 @@ nav ul li:hover::after{
 }
 
 .slideshow-container {
- width: 70%;
- height: 400px;
- position: absolute;
- left: -50%;
- right: -50%;
- top: 50%;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -220px;
-  margin-right: -800px;
-  margin-left: 468px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  width: 750px;
+  height: 100%;
+   margin: -550px 500px;
 }
 
 /* Caption text */
 .text {
+ 
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 28px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 100px;
+  right:40px;
+  bottom: 150px;
   width: 100%;
   text-align: center;
 }
 
+
 /* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 100px;
-}
+
 
 /* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0px -50px;
-  margin-left: 30px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
 
-.active, .dot:hover {
-  background-color: #717171;
-}
 
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
+  from {opacity: .4} 
   to {opacity: 1}
 }
 
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
